@@ -57,6 +57,7 @@ Bug fixes
  * Unauthenticated AJAX requests to admin views now return 403 rather than redirecting to the login page (Karl Hobley)
  * ``TableBlock`` options ``afterChange``, ``afterCreateCol``, ``afterCreateRow``, ``afterRemoveCol``, ``afterRemoveRow`` and ``contextMenu`` can now be overridden (Loic Teixeira)
  * The lastmod field returned by wagtailsitemaps now shows the last published date rather than the date of the last draft edit (Matt Westcott)
+ * Document chooser upload form no longer renders container elements for hidden fields (Jeffrey Chau)
 
 
 Upgrade considerations
